# hma-matrix

./: .dockerignore  Dockerfile  README.md  compose.yaml  config.py  pyproject.toml  startup.sh
.github/: dependabot.yml
.github/workflows/: docker.yaml  zizmor.yaml
matrix_exchanges/: synapse_quarantined.py
